# plottwist-tools-cookiecutter

./: README.md  README.rst  cookiecutter.json
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/: .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/docs/sphinx/: conf.py  index.rst
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/tests/: test_general.py
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/{{cookiecutter.project_name}}/tools/: __init__.py
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/{{cookiecutter.project_name}}/tools/{{cookiecutter.tool_name}}/: __logging__.ini  __version__.py  _version.py
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/{{cookiecutter.project_name}}/tools/{{cookiecutter.tool_name}}/core/: {{cookiecutter.tool_name}}.py
{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}/{{cookiecutter.project_name}}/tools/{{cookiecutter.tool_name}}/widgets/: {{cookiecutter.tool_name}}.py
