[metadata]
name = {{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}
description = {{cookiecutter.tool_description}}
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
url = https://github.com/{{cookiecutter.project_name_alt}}-Short-Film/{{cookiecutter.project_name}}-tools-{{cookiecutter.tool_name}}

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    {{cookiecutter.project_name}}

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.project_name}}/tools/{{cookiecutter.tool_name}}/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =